@@ -238,10 +238,11 @@ if test x"$tcpw" != xno; then
 fi
 
 # check for in_port_t definition
-AC_TRY_RUN([#include <netinet/in.h>
+AC_TRY_RUN([
 #include <sys/types.h>
-int main(int argc, char **argv) { in_port_t pt; pt = 0; return pt; }],
-AC_DEFINE(HAVE_IN_PORT_T,1,[in_port_t is defined]), AC_MSG_RESULT(in_port_t is not defined))
+#include <netinet/in.h>
+int main(int argc, char **argv) { in_port_t pt; pt = 0; return pt; }
+], AC_DEFINE(HAVE_IN_PORT_T,1,[in_port_t is defined]), AC_MSG_RESULT(in_port_t is not defined))
 
 dnl CLAMSCAN_LIBS=""
 dnl FRESHCLAM_LIBS=""
